syntax = "proto3";

package gprc;

option go_package = "../grpc";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";

service TagHandler {
    rpc List(ListReq) returns (ListTag) {
        option (google.api.http) = {
            get: "/tags"
        };
    };

    rpc Get(GetReq) returns (Tag) {
        option (google.api.http) = {
            get: "/tags/{id}"
        };
    };

    rpc Create(CreateReq) returns (Tag) {
        option (google.api.http) = {
            post: "/tags/"
            body: "*"
        };
    };

    rpc Update(UpdateReq) returns (Tag) {
        option (google.api.http) = {
            put: "/tags/{id}"
            body: "*"
        };
    };

    rpc Delete(DeleteReq) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/tags/{id}"
        };
    }
}

message ListReq {
}

message GetReq {
    int32 id = 1;
}

message CreateReq {
    string value = 1;
    string description = 2;
}

message UpdateReq {
    int32 id  = 1 [(validate.rules).message.required = true];
    Tag new_tag_info = 2;
}

message DeleteReq {
    int32 id = 1;
}


message ListTag {
    repeated Tag tags = 1;
}

message Tag {
    int32 id                               = 1;
    string value                           = 2;
    string description                     = 3;
    google.protobuf.Timestamp created_time = 7;
    google.protobuf.Timestamp updated_time = 8;
}